corrections after checking

--- a/index.html
+++ b/index.html
@@ -28,16 +28,20 @@
         >
         <nav class="header-navigation">
           <ul class="header-list list">
-            <li><a class="header-link nav current" href="">Студия</a></li>
-            <li>
+            <li class="item">
+              <a class="header-link nav current" href="">Студия</a>
+            </li>
+            <li class="item">
               <a class="header-link nav" href="./portfolio.html">Портфолио</a>
             </li>
-            <li><a class="header-link nav" href="">Контакты</a></li>
+            <li class="item">
+              <a class="header-link nav" href="">Контакты</a>
+            </li>
           </ul>
         </nav>
         <div class="header-contacts-wraper">
           <ul class="list header-contacts">
-            <li>
+            <li class="item">
               <a class="header-link contact" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
@@ -137,8 +141,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-employee">Игорь Демьяненко</h3>
-              <p class="team-role" lang="en">Product Designer</p>
+              <div class="description-cart">
+                <h3 class="team-employee">Игорь Демьяненко</h3>
+                <p class="team-role" lang="en">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -147,8 +153,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-employee">Ольга Репина</h3>
-              <p class="team-role" lang="en">Frontend Developer</p>
+              <div class="description-cart">
+                <h3 class="team-employee">Ольга Репина</h3>
+                <p class="team-role" lang="en">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -157,8 +165,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-employee">Николай Тарасов</h3>
-              <p class="team-role" lang="en">Marketing</p>
+              <div class="description-cart">
+                <h3 class="team-employee">Николай Тарасов</h3>
+                <p class="team-role" lang="en">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -167,8 +177,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-employee">Михаил Ермаков</h3>
-              <p class="team-role" lang="en">UI Designer</p>
+              <div class="description-cart">
+                <h3 class="team-employee">Михаил Ермаков</h3>
+                <p class="team-role" lang="en">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
