--- a/portfolio.html
+++ b/portfolio.html
@@ -28,16 +28,22 @@
         >
         <nav class="header-navigation">
           <ul class="header-list list">
-            <li><a class="header-link nav current" href="">Студия</a></li>
-            <li>
-              <a class="header-link nav" href="./portfolio.html">Портфолио</a>
+            <li class="item">
+              <a class="header-link nav" href="./index.html">Студия</a>
             </li>
-            <li><a class="header-link nav" href="">Контакты</a></li>
+            <li class="item">
+              <a class="header-link nav current" href="./portfolio.html"
+                >Портфолио</a
+              >
+            </li>
+            <li class="item">
+              <a class="header-link nav" href="">Контакты</a>
+            </li>
           </ul>
         </nav>
         <div class="header-contacts-wraper">
           <ul class="list header-contacts">
-            <li>
+            <li class="item">
               <a class="header-link contact" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
@@ -79,8 +85,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="works-title">Технокряк</h3>
-                <p class="works-title-pre">Веб-сайт</p>
+                <div class="description-work">
+                  <h3 class="works-title">Технокряк</h3>
+                  <p class="works-title-pre">Веб-сайт</p>
+                </div>
               </a>
             </li>
             <li class="works-item">
@@ -91,8 +99,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="works-title">Постер New Orlean vs Golden Star</h3>
-                <p class="works-title-pre">Дизайн</p>
+                <div class="description-work">
+                  <h3 class="works-title">Постер New Orlean vs Golden Star</h3>
+                  <p class="works-title-pre">Дизайн</p>
+                </div>
               </a>
             </li>
             <li class="works-item">
@@ -103,8 +113,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="works-title">Ресторан Seafood</h3>
-                <p class="works-title-pre">Приложение</p>
+                <div class="description-work">
+                  <h3 class="works-title">Ресторан Seafood</h3>
+                  <p class="works-title-pre">Приложение</p>
+                </div>
               </a>
             </li>
             <li class="works-item">
@@ -115,8 +127,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="works-title">Проект Prime</h3>
-                <p class="works-title-pre">Маркетинг</p>
+                <div class="description-work">
+                  <h3 class="works-title">Проект Prime</h3>
+                  <p class="works-title-pre">Маркетинг</p>
+                </div>
               </a>
             </li>
             <li class="works-item">
@@ -127,8 +141,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="works-title">Проект Boxes</h3>
-                <p class="works-title-pre">Приложение</p>
+                <div class="description-work">
+                  <h3 class="works-title">Проект Boxes</h3>
+                  <p class="works-title-pre">Приложение</p>
+                </div>
               </a>
             </li>
             <li class="works-item">
@@ -139,8 +155,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="works-title">Inspiration has no Borders</h3>
-                <p class="works-title-pre">Веб-сайт</p>
+                <div class="description-work">
+                  <h3 class="works-title">Inspiration has no Borders</h3>
+                  <p class="works-title-pre">Веб-сайт</p>
+                </div>
               </a>
             </li>
             <li class="works-item">
@@ -151,8 +169,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="works-title">Издание Limited Edition</h3>
-                <p class="works-title-pre">Дизайн</p>
+                <div class="description-work">
+                  <h3 class="works-title">Издание Limited Edition</h3>
+                  <p class="works-title-pre">Дизайн</p>
+                </div>
               </a>
             </li>
             <li class="works-item">
@@ -163,8 +183,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="works-title">Проект LAB</h3>
-                <p class="works-title-pre">Маркетинг</p>
+                <div class="description-work">
+                  <h3 class="works-title">Проект LAB</h3>
+                  <p class="works-title-pre">Маркетинг</p>
+                </div>
               </a>
             </li>
             <li class="works-item">
@@ -175,8 +197,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="works-title">Growing Business</h3>
-                <p class="works-title-pre">Приложение</p>
+                <div class="description-work">
+                  <h3 class="works-title">Growing Business</h3>
+                  <p class="works-title-pre">Приложение</p>
+                </div>
               </a>
             </li>
           </ul>
