--- a/index.html
+++ b/index.html
@@ -39,20 +39,18 @@
             </li>
           </ul>
         </nav>
-        <div class="header-contacts-wraper">
-          <ul class="list header-contacts">
-            <li class="item">
-              <a class="header-link contact" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li>
-              <a class="header-link contact" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
-            </li>
-          </ul>
-        </div>
+        <ul class="list header-contacts">
+          <li class="item">
+            <a class="header-link contact" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="item">
+            <a class="header-link contact" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
+          </li>
+        </ul>
       </div>
     </header>
     <main>
@@ -193,21 +191,21 @@
         >
         <address class="footer-list">
           <ul class="list">
-            <li>
+            <li class="footer-list-item">
               <a
                 class="footer-address"
                 href="https://goo.gl/maps/Gs2r9fRiEiPHx9m86"
                 >г. Киев, пр-т Леси Украинки, 26</a
               >
             </li>
-            <li>
+            <li class="footer-list-item">
               <a
                 class="footer-address contacts"
                 href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
+            <li class="footer-list-item">
               <a class="footer-address contacts" href="tel:+380961111111"
                 >+38 096 111 11 11</a
               >
