--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
         <nav class="header-navigation">
           <ul class="header-list list">
             <li class="item">
-              <a class="header-link nav" href="./index.html">Студия</a>
+              <a class="header-link nav" href="">Студия</a>
             </li>
             <li class="item">
               <a class="header-link nav current" href="./portfolio.html"
@@ -41,20 +41,18 @@
             </li>
           </ul>
         </nav>
-        <div class="header-contacts-wraper">
-          <ul class="list header-contacts">
-            <li class="item">
-              <a class="header-link contact" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li>
-              <a class="header-link contact" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
-            </li>
-          </ul>
-        </div>
+        <ul class="list header-contacts">
+          <li class="item">
+            <a class="header-link contact" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="item">
+            <a class="header-link contact" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
+          </li>
+        </ul>
       </div>
     </header>
     <main>
@@ -62,17 +60,19 @@
         <div class="container">
           <h1 class="visually-hidden">Works</h1>
           <ul class="filters-list list">
-            <li>
+            <li class="filters-list-item">
               <button class="filters-btn current-btn" type="button">Все</button>
             </li>
-            <li>
+            <li class="filters-list-item">
               <button class="filters-btn" type="button">Веб-сайты</button>
             </li>
-            <li>
+            <li class="filters-list-item">
               <button class="filters-btn" type="button">Приложения</button>
             </li>
-            <li><button class="filters-btn" type="button">Дизайн</button></li>
-            <li>
+            <li class="filters-list-item">
+              <button class="filters-btn" type="button">Дизайн</button>
+            </li>
+            <li class="filters-list-item">
               <button class="filters-btn" type="button">Маркетинг</button>
             </li>
           </ul>
@@ -214,21 +214,21 @@
         >
         <address class="footer-list">
           <ul class="list">
-            <li>
+            <li class="footer-list-item">
               <a
                 class="footer-address"
                 href="https://goo.gl/maps/Gs2r9fRiEiPHx9m86"
                 >г. Киев, пр-т Леси Украинки, 26</a
               >
             </li>
-            <li>
+            <li class="footer-list-item">
               <a
                 class="footer-address contacts"
                 href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
+            <li class="footer-list-item">
               <a class="footer-address contacts" href="tel:+380961111111"
                 >+38 096 111 11 11</a
               >
