--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
         <nav class="header-navigation">
           <ul class="header-list list">
             <li class="item">
-              <a class="header-link nav" href="">Студия</a>
+              <a class="header-link nav" href="./index.html">Студия</a>
             </li>
             <li class="item">
               <a class="header-link nav current" href="./portfolio.html"
